# Tatneft_ASSK

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  make.ps1
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: bd6564c8bd40_initial.py  c4d2e1f8b901_work_order_priority_and_diagnostic.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: acts.py  anomalies.py  auth.py  contractors.py  cv.py  dashboard.py  objects.py  orders.py  telemetry.py  works.py
backend/app/core/: __init__.py  config.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  session.py  types.py
backend/app/integrations/: __init__.py
backend/app/integrations/asutp/: __init__.py  base.py  factory.py  mock.py  opcua.py
backend/app/mocks/: __init__.py
backend/app/mocks/generators/: __init__.py  seed.py  telemetry_synth.py
backend/app/models/: __init__.py  act.py  audit.py  contractor.py  equipment.py  object.py  order.py  photo.py  rating.py  telemetry.py  user.py  work.py
backend/app/schemas/: __init__.py  common.py  object.py  order.py  photo.py  user.py  work.py
backend/app/services/: __init__.py  anomaly_detector.py  audit.py  auth.py  cv_client.py  geo.py  rules.py
backend/tests/: __init__.py  conftest.py  test_anomaly_detector.py  test_audit.py  test_auth.py  test_core.py  test_cv_client.py  test_cv_proxy.py  test_fsm.py  test_geo.py  test_rules.py  test_schemas.py  test_telemetry_window.py
cv-service/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
cv-service/app/: __init__.py  config.py  factory.py  main.py  synth.py  synth_demo.py
cv-service/app/detectors/: __init__.py  base.py  coco.py  defect.py  mock.py  yolo.py
cv-service/scripts/: fetch_sample_image.py  synth_train_data.py  yolo_train.py
cv-service/tests/: conftest.py  test_api.py  test_coco_smoke.py  test_defect_smoke.py
docs/: analogs.md  data-model.md
frontend/: index.html
scripts/: _show_groups.ps1  demo.py  inspect_api.ps1  inspect_api.py  test_anomaly_flow.py  test_contractor_flow.py  test_photo_upload.py  test_photo_upload_v2.py  test_review_flow.py  test_web_form.py
