[project]
name = "askk-backend"
version = "0.1.0"
description = "АСКК Татнефть-Добыча — прототип бэкенда"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Опик М.Ю.",     email = "opik@tatneft.local" },
    { name = "Алейников Н.В.", email = "aleynikov@tatneft.local" },
    { name = "Рязанцев А.А.",  email = "ryazantsev@tatneft.local" },
    { name = "Соловьёв М.В.",  email = "solovyov@tatneft.local" },
    { name = "Швецова В.Д.",   email = "shvetsova@tatneft.local" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "Pillow>=11.0.0",
]

# Планируется, но пока не используется кодом:
#   - minio>=7.2.9   # фото-адаптер (план из docs/analogs.md)
#   - redis>=5.2.0   # кэш/сессии (нужен для 3+ инстансов)
#   - numpy>=2.1.0   # статистика для anomaly_detector
#   - tenacity>=9.0.0  # retry для внешних API (OPC-UA, ASUTP)

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''/(\.git|\.venv|venv|build|dist)/'''

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "scripts/"]
mypy_path = "."
pythonpath = ["."]
